# connectors

./: pyproject.toml  requirements.txt
src/connectors/: __init__.py
src/connectors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/connectors/mongodb/: __init__.py  mongo_connector.py
src/connectors/mysql/: __init__.py  sql_connector.py
